*F: initial renaming of variables/methods => pozicii -> positions, PrebroiOstavashtiteMinichki -> GetRemainingMinesCount
*F: made positions field private, turned it into char[,]; cosmetic changes in DisplayField method; 
*F: replaced Int32 with built-in alias int; removed useless comments; replaced substring extraction of coordinates with Split() and Parse();
*F: renamed local variables to start with lower-case letters; added a struct cell; added method to detonate a cell which checks if its coordinates are valid
*F: detonation methods changed to return an array of cells to detonate, then iterate them and detonate all cells in range
*F: Separated logic in several files - BattlefieldApp (main class), Battlefield (containing core logic), Cell struct and PatternFactory(generating arrays of cells to be detonated)
*F: implemented singleton pattern - made constructor private; exposed getter that returns an instance; made field size a property with private setter
*F: created boolean method to check if a given cell is a mine; made increment of detonated mines private (happens automatically on cell detonation)
*F: made several methods private, exposed only needed functionality; removed unused variables; changed nested loops with foreach in GetRemainingMIesCountMethod
*F: moved variables to inner scope; renamed flag to isMinePlaced; fixed numerous StyleCop warnings; TODO: documentation
*S: change Pattern Factory class's methods to return Lists in order to make methods shorter
*N: change Pattern Factory class's methods to receive as argument Cell instance instead of xCoordinate and yCoordinate; did the same for methods DetonateMine and IsCellMine in Battlefield class;
*N: create method GetCellToExplode in BattlefieldApp than returns cellToExplode
*N: made Battlefield class sealed
*N: changed method Create in Battlefield to user ?? operator insted of if statement
*N: moved this.DetonatedMines++ from method GetRemainingMinesCount to DetonateMine